--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
+    implementation 'com.airbnb.android:lottie-compose:4.2.0'
+    implementation "androidx.compose.material:material-icons-extended:1.1.1"
 }
