added quiz creation and question creation screens. for now their activities just create a quiz object. TODO: save the object to firebase, implement uploading pictures.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.PoQuizowane"
         tools:targetApi="31">
         <activity
+            android:name=".CreateQuestionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".CreateQuizActivity"
+            android:exported="false" />
+        <activity
             android:name=".LeaderboardActivity"
             android:exported="false" />
         <activity
