--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,4 +72,6 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha01'
     implementation 'com.airbnb.android:lottie-compose:4.2.0'
     implementation "androidx.compose.material:material-icons-extended:1.1.1"
+    implementation("io.coil-kt:coil-compose:2.4.0")
+
 }
